README, README.md message

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -9,6 +9,7 @@ sbotools
   * Util.pm: Read the hints file only once; allow multiple optional dependency specs for the same script
   * Lint the value of SBO_HOME before running anything other than sboconfig
   * Repo.pm: Remove antiquated subroutine migrate_repo()
+  * Install development man pages on SBO::Lib to man 3
 
 3.1 - 2024-12-05
   * sbofind: Allow multiple search terms
