--- a/slackbuild/sbotools/README
+++ b/slackbuild/sbotools/README
@@ -7,7 +7,7 @@ multilib systems, reverse dependency search, gpg verification and more.
 
 There is a man page for each included command. For 'executive
 summaries' and online man pages, see the project's home page. The
-sbotools Perl modules are documented in man3.
+SBO::LIB::* modules are documented in man 3.
 
 sbotools bundles the required Perl module Sort::Versions. This does
 not interfere with a copy installed from the CPAN or from
