--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -1,4 +1,4 @@
-.TH sbocheck 1 "Prickle-Prickle, The Aftermath 47, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sbocheck 1 "Pungenday, The Aftermath 61, 3190 YOLD" "sbotools 3.2" sbotools
 .SH NAME
 .P
 .B
