--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Prickle-Prickle, The Aftermath 47, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sbotools 1 "Pungenday, The Aftermath 61, 3190 YOLD" "sbotools 3.2" sbotools
 .SH NAME
 .P
 .B
