--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Prickle-Prickle, The Aftermath 47, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sbotools.conf 5 "Pungenday, The Aftermath 61, 3190 YOLD" "sbotools 3.2" sbotools
 .SH NAME
 .P
 .B
