--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,4 +1,4 @@
-.TH sboconfig 1 "Pungenday, The Aftermath 61, 3190 YOLD" "sbotools 3.2" sbotools
+.TH sboconfig 1 "Prickle-Prickle, The Aftermath 62, 3190 YOLD" "sbotools 3.2.1" sbotools
 .SH NAME
 .P
 .B
