--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -1,4 +1,4 @@
-.TH sboinstall 1 "Pungenday, The Aftermath 61, 3190 YOLD" "sbotools 3.2" sbotools
+.TH sboinstall 1 "Prickle-Prickle, The Aftermath 62, 3190 YOLD" "sbotools 3.2.1" sbotools
 .SH NAME
 .P
 .B
