--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,4 +1,7 @@
 sbotools
+* Post-Release
+  * sboconfig: Lint REPO; allow versions "X.Y+" and "current"; more informative error messages
+
 * 3.2.1 - 2024-12-20
   * Bugfix: sboinstall, sboupgrade GPG check for custom repositories (removed unneeded conditional)
 
