Validate configuration before running scripts.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -94,6 +94,11 @@ and
 --nopull
 verifies the repo in-place without fetching.
 Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
+.P
+If an invalid configuration is detected in
+.I
+/etc/sbotools/sbotools.conf\fR\
+\&, the script will exit with a diagnostic message.
 .SH OPTIONS
 .P
 .B
