--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -63,6 +63,11 @@ or
 .B
 --option
 must be specified for this script to do anything.
+.P
+If an invalid configuration is detected in
+.I
+/etc/sbotools/sbotools.conf\fR\
+\&, the script will exit with a diagnostic message.
 .SH OPTIONS
 .P
 .B
