--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -42,6 +42,11 @@ sboremove
 to uninstall packages without confirmation prompts,
 and there are no plans to add that functionality in the
 future.
+.P
+If an invalid configuration is detected in
+.I
+/etc/sbotools/sbotools.conf\fR\
+\&, the script will exit with a diagnostic message.
 .SH OPTIONS
 .P
 .B
