--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -30,6 +30,11 @@ on a FreeBSD system. If the repository includes a
 .I
 TAGS.txt
 file, that will be used to find additional results.
+.P
+If an invalid configuration is detected in
+.I
+/etc/sbotools/sbotools.conf\fR\
+\&, the script will exit with a diagnostic message.
 .SH OPTIONS
 .P
 .B
