--- a/slackbuild/sbotools/README
+++ b/slackbuild/sbotools/README
@@ -15,9 +15,9 @@ slackbuilds.org.
 
 sbotools installs a default configuration file to
 /etc/sbotools/sbotools.conf.new. sbotools.conf files from version 2.7
-are compatible, but some of the options are new. It may be convenient
-to examine the new file for added options and annotation when upgrading
-from version 2.7.
+are mostly compatible, but some of the options are new. It may be
+convenient to examine the new file for added options and annotation
+when upgrading from version 2.7.
 
 To blacklist scripts and notify sbotools of optional dependencies, see
 /etc/sbotools/sbotools.hints.
