Do not lint REPO so as to avoid potential breaking change

--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -255,8 +255,8 @@ REPO=(FALSE|url|/path)
 .RS
 If set to a git or rsync
 .B
-URL
-(rsync:// or ending in .git), use that repository instead of the
+URL\fR\
+\&, use that repository instead of the
 .B
 sbotools
 default for your
