--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -314,8 +314,8 @@ the one specified in
 REPO\fR\
 \&: If set to a git or rsync
 .B
-URL
-(rsync:// or ending with .git), use that repository instead of the
+URL\fR\
+\&, use that repository instead of the
 .B
 sbotools
 default for your
