--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Pungenday, The Aftermath 66, 3190 YOLD" "" "sbotools 3.2.1"
+.TH SBO::Lib::Util 3 "Prickle-Prickle, The Aftermath 67, 3190 YOLD" "" "sbotools 3.2.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -206,8 +206,8 @@ returns the resulting string.
 .Ve
 .PP
 \&\f(CWlint_sbo_config()\fR takes the name of an sbotools script and a hash with configuration
-parameters. It checks the validity of all parameters except for GIT_BRANCH and exits
-with an error message in case of invalid options.
+parameters. It checks the validity of all parameters except for GIT_BRANCH and REPO,
+exiting with an error message in case of invalid options.
 .PP
 \&\f(CWsboconfig(1)\fR runs this subroutine to lint any requested parameter changes;
 all other scripts lint the full configuration at startup.
