Correct README.md, Changes

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,6 +1,6 @@
 sbotools
 * Post-Release
-  * sboconfig: Lint REPO; allow versions "X.Y+" and "current"; more informative error messages
+  * sboconfig: Allow versions "X.Y+" and "current"; more informative error messages
   * Exit with invalid sbotools.conf parameters
 
 * 3.2.1 - 2024-12-20
